src/renderer/issue-editor/styles.scss
@import "~@blueprintjs/core/lib/scss/variables";
@import "renderer/mixins.scss";

:local .spinner {
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
}

:local .paneHeader {
  flex-grow: 0;
  z-index: 5;
}

:local .twoPaneEditor {
  @include twoPaneWindowLayout(20em);
}

:local .messageListPane {
  overflow-y: hidden;

  background: $pt-app-background-color;
  position: relative;

  display: flex;
  flex-flow: column nowrap;

  cursor: default;
  -webkit-app-region: drag;
}

:local .selectedMessagePane {
  box-shadow: $pt-elevation-shadow-3;
  position: relative;
  z-index: 2;
  overflow-y: auto;

  :local .messageEditorPaneHeader {
    display: flex;
    flex-flow: row nowrap;
    padding-right: 0;

    :global .title {
      flex: 1;
      margin-right: 1rem;
    }
    :global .actions {
      > * {
        height: $pt-navbar-height;
        width: 4em;
        border-radius: 0;
        &:focus {
          outline: none;
        }
      }
    }
  }
}

:local .newMessageMenu {
  max-width: 18em;
}

:local .messageEditorDialog {
  max-height: 90vh;

  :global .bp3-label:last-child,
  :global .bp3-form-group:last-child {
    margin-bottom: 0;
  }

  :global .bp3-dialog-body {
    display: flex;
    flex-flow: column nowrap;
    overflow-y: hidden;
  }
}

:local .messageEditorTabs {
  :global .bp3-tab-list {
    margin: 0 1rem;
    transform: translateY(.5rem);

    .bp3-tab-indicator {
      background-color: $pt-text-color;
    }
    .bp3-tab {
      &:focus {
        outline: none;
      }
      &[aria-selected=false] {
        color: $pt-link-color;
      }
      &[aria-selected=true] {
        color: $pt-text-color;
      }
    }
  }
}


/* Freeform text editor */

:local .freeformEditor {
  display: flex;
  flex-flow: column nowrap;
  overflow-y: hidden;

  :global .ProseMirror {
    flex: 1;
    overflow-y: auto;

    table {
      margin-bottom: 10px;
      td {
        padding: .5rem;
      }
    }

    p:last-of-type {
      margin-bottom: 0;
    }

    ul li {
      margin-bottom: 10px;
    }

    p.empty-node {
      &::before {
        content: "¶" !important;
        font-style: normal;
        opacity: 0.5;
      }
      &:hover::before {
        content: "¶ — empty block" !important;
        opacity: 1;
      }
    }
  }
}

:local .freeformEditorToolbar {
  background: $pt-app-background-color;

  button, button[disabled] {
    cursor: default;
  }
}

:local .amendmentsList {
  margin-top: 1rem;
}


/* Message type specific editors */

/* Running Annexes */

:local .emptyExtraAnnexedPublicationsPane {
  padding-top: 1rem;
}

/* Amendment & custom messages */

.editor-pane-message-amendment,
.editor-pane-message-custom {
  display: flex;
  flex-flow: column nowrap;

  :local .messageEditorPaneHeader {
    flex-shrink: 0;
  }

  :local .freeformEditor {
    flex: 1;
    overflow-y: auto;
    padding: .5rem;
    margin: .5rem;
    font-size: 110%;
  }
}


/* Telephone service */

@mixin tsAddItemTrigger() {
  border-radius: 0 !important;
}

:local .addCommTrigger {
  @include tsAddItemTrigger();
}

:local .addCountryTrigger {
  @include tsAddItemTrigger();
  width: 100%;
}

:local .tsCountryCommunicationSet {
  border-radius: 0 !important;
}

:local .tsCountryCommunicationEditor {
  display: flex;
  flex-flow: row nowrap;
  overflow: hidden;

  > :first-child {
    margin-right: 1rem;
  }
}

:local .tsCommunication {
  color: red;
  border-radius: 0 !important;
  overflow: hidden;

  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

:local .tsCountryButtons {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

:local .tsCommunicationFormContents {
  display: flex;
  flex-flow: column nowrap;
  overflow: hidden;
}

